<resources>
    <string name="app_name">ITDOC</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fire">"Закалились в огне"</string>
    <string name="koronavirustxt">"Коронавирус"</string>
    <string name="pills">"Какое право имеет покупатель"</string>
    <string name="poison">"Новое средство против диабета"</string>
    <string name="sportwithheadache">"Головная боль при зянятиях спортом"</string>
    <string name="happiness">"Как повысить уровень эндорфинов"</string>
    <string name="backbone">"Опора человека суставы"</string>
    <string name="holloware">"Сердечно сосудистые заболевания"</string>
    <string name="machine">"Механотерапия"</string>
    <string name="junkfood">"Вся правда о фастфуде"</string>
    <string name="gripp">"Сезонный грипп"</string>
    <string name="orvi">"ОРВИ"</string>
    <string name="allergy">"Сезонная аллергия"</string>
    <string name="avitominoz">"Авитоминоз"</string>
    <string name="astma">"Астма"</string>
    <string name="cancer">"Рак"</string>
    <string name="gipoterioz">"Гипотериоз"</string>
    <string name="gastrit">"Гастрит"</string>

    <string name="title_activity_map">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
