<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/astma"
            android:scaleType="centerInside"
          
            android:text="@string/astma"
            android:textAlignment="center"
            android:textColor="#FFFF"
            android:tint="#99583737" />

        <Button
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/cancer"
        android:scaleType="centerInside"
        android:text="@string/cancer"
        android:textAlignment="center"
        android:textColor="#FFFF"
        android:tint="#99583737" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/gipoterioz"
        android:scaleType="centerInside"
        android:text="@string/gipoterioz"
        android:textAlignment="center"
        android:textColor="#FFFF"
        android:tint="#99583737" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/holloware"
        android:scaleType="centerInside"
        android:text="@string/holloware"
        android:textAlignment="center"
        android:textColor="#FFFF"
        android:tint="#99583737" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/gastrit"
        android:scaleType="centerInside"
        android:text="@string/gastrit"
        android:textAlignment="center"
        android:textColor="#FFFF"
        android:tint="#99583737" />

    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>