<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
      >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:layout_width="424dp"
                android:layout_height="150dp"

                android:background="@drawable/gripp"

                android:scaleType="fitEnd"


                android:text="@string/gripp"
                android:textAlignment="center"
                android:textColor="#FFFF"
                android:tint="#99583737" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="150dp"

                android:background="@drawable/koronavirus1"

                android:scaleType="center"


                android:text="@string/koronavirustxt"
                android:textAlignment="center"
                android:textColor="#FFFF"
                android:tint="#99583737" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/orvi"
                android:scaleType="centerInside"
                android:text="@string/orvi"
                android:textAlignment="center"
                android:textColor="#FFFF"
                android:tint="#99583737" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/avitominoz"
                android:scaleType="centerInside"
                android:text="@string/avitominoz"
                android:textAlignment="center"
                android:textColor="#FFFF"
                android:tint="#99583737" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/allergy"
                android:scaleType="centerInside"
                android:text="@string/allergy"
                android:textAlignment="center"
                android:textColor="#FFFF"
                android:tint="#99583737" />



        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>